# etherealdb

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
examples/: rules.example.txt
src/: config.rs  generate.rs  infer.rs  lib.rs  main.rs  server.rs  shape.rs  theme.rs
src/proto/: mod.rs  mysql.rs  pg.rs  resp.rs
tests/: fuzz_parsers.rs  mysql_e2e.rs  pg_e2e.rs  redis_e2e.rs
